--- a/css/studynote_v2.css
+++ b/css/studynote_v2.css
@@ -1,3 +1,54 @@
+/******************************* note ***************************************/
+
+
+/***************************** CSS书写顺序 *********************************
+    1.位置属性(position, top, right, z-index, display, float等)
+    2.大小(width, height, padding, margin)
+    3.文字系列(font, line-height, letter-spacing, color- text-align等)
+    4.背景(background, border等)
+    5.其他(animation, transition等)
+**************************************************************/
+
+/*************************** CSS命名规范（规则）*********************************
+    头：header
+    内容：content/container
+    尾：footer
+    导航：nav
+    侧栏：sidebar
+    栏目：column
+    页面外围控制整体佈局宽度：wrapper
+    左右中：left right center
+    登录条：loginbar
+    标志：logo
+    广告：banner
+    页面主体：main
+    热点：hot
+    新闻：news
+    下载：download
+    子导航：subnav
+    菜单：menu
+    子菜单：submenu
+    搜索：search
+    友情链接：friendlink
+    页脚：footer
+    版权：copyright
+    滚动：scroll
+    内容：content
+    标签：tags
+    文章列表：list
+    提示信息：msg
+    小技巧：tips
+    栏目标题：title
+    加入：joinus
+    指南：guide
+    服务：service
+    注册：regsiter
+    状态：status
+    投票：vote
+    合作伙伴：partner
+**************************************************************/
+
+
 /******************************* reset ***************************************/
 
 
@@ -152,15 +203,16 @@ p {
     line-height: 24px;
 }
 
-pre {
+.pre {
     margin-bottom: 16px;
     padding: 14px 0 0 14px;
+    box-sizing: border-box;
     font-family: Consolas, "Courier New", Courier, monospace;
     background-color: #FDFDFD;
     box-shadow: 2px 2px 6px #6D6D6D inset;
 }
 
-pre+p.aPre {
+.pre+p.aPre {
     margin-top: -16px;
 }
 
